[tool.poetry]
name = "assurant"
version = "0.1.0"
description = "Análise de Cobertura de Oficinas"
authors = ["Seu Nome <seu@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.2"
Flask-HTTPAuth = "4.8.0"
pandas = "1.5.3"
numpy = "1.24.3"
scikit-learn = "1.3.0"
geopy = "2.3.0"
gunicorn = "20.1.0"
waitress = "2.1.2"
diskcache = "5.6.3"
psutil = "5.9.5"
openpyxl = "3.1.2"
XlsxWriter = "3.1.2"
Flask-Compress = "1.13"
Flask-Login = "0.6.2"
Werkzeug = "2.3.7"
setuptools = "69.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"